tests/od2trips/errors/format/amitran/type_missing/errors.od2trips
Error: Attribute 'id' is missing in definition of a actorConfig.
Error: Loading failed.
Quitting (on error).
